design the community section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
 
     </section>
     <section id="team">
-        <div class="team-img">
+            <h1>OUR COMMUNITY</h1>
+
         </div>
     </section>
 
@@ -198,8 +199,8 @@
             <div class="footer-content">
                 <h3>FOLLOW US</h3>
                 <ul class="social-icons">
-                <li><a href="#"><i class='bx bxl-facebook-circle'></i></a></li>
-                <li><a href="#"><i class='bx bxl-whatsapp-square' ></i></a></li>
+                <li><a href="https://www.facebook.com/collins.warah"><i class='bx bxl-facebook-circle'></i></a></li>
+                <li><a href="https://wa.me/message/D6GD5Q5J5QIPB1"><i class='bx bxl-whatsapp-square' ></i></a></li>
                 <li><a href="#"><i class='bx bxl-linkedin-square'></i></a></li>
                 <li><a href="#"><i class='bx bxl-github'></i></a></li>
             </ul>
