DESIGN THE DROP DOWN NAV

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
             <a href="#" class="active">HOME</a>
             <a href="about.html">MAP</a>
             <a href="#">LINKS</a>
-            <a href="#">PROJECT</a>
+            <div class="dropdown">
+                <a href="#" class="dropbtn">PROJECT</a>
+                <div class="dropdown-content">
+                    <a href="#">Web Development</a>
+                    <a href="#">Mobile Apps</a>
+                    <a href="#">Data Science</a>
+                    <a href="#">AI/ML</a>
+                </div>
+            </div>
             <a href class="button">COMMUNIYTY</a>
             
 
@@ -307,7 +315,5 @@ window.onload = function() {
             <p>&COPY;2025 COLLINS WARAH .All rights reserveed</p>
         </div>
       </footer>
-</body>
-</html>         
 </body>
 </html>
