--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="index.html" class="logo"><img src="img/Untitled-6.png"height="80px" width="100px" alt=""></a>
 
         <nav class="navbar">
-            <a href="#" class="active">HOME</a>
+            <a href="index.html" class="active">HOME</a>
             
             <div class="dropdown">
                 <a href="#" class="dropbtn">START LEARNING</a>
