design the ebook page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="index.html" class="logo"><img src="img/Untitled-6.png"height="80px" width="100px" alt=""></a>
 
         <nav class="navbar">
-            <a href="index.html" class="active">HOME</a>
+            <a href="index.h" class="active">HOME</a>
             
             <div class="dropdown">
                 <a href="#" class="dropbtn">START LEARNING</a>
@@ -21,6 +21,7 @@
                     <a href="#">PROJECT</a>
                     <a href="#">ROADMAPS</a>
                     <a href="tutorial.html">TUTORIALS</a>
+                    <a href="ebooks.html">EBOOKS</a>
                 </div>
             </div>
             <a href class="button">COMMUNIYTY</a>
@@ -73,9 +74,9 @@
                 <img src="img/Coding workshop-pana.png "
                 height="80px" width="80px" alt="">
                 <h3>VALUE</h3>
-                <p>• Innovation: We embrace creativity and continuous learning to drive change.<br>
-                   • Collaboration: We grow stronger by working together and sharing knowledge. <br>
-                   • Inclusion: We believe tech should be accessible to all, regardless of background.</p>
+                <p><strong>INNOVATION:</strong> We embrace creativity and continuous learning to drive change.<br>
+                   <strong>COLLABORATION:</strong> We grow stronger by working together and sharing knowledge. <br>
+                   <strong>INCLUSION:</strong> We believe tech should be accessible to all, regardless of background.</p>
             <a href="signup.html" class="button">SIGNUP</a> 
 
             </div>
