--- a/tutorial.html
+++ b/tutorial.html
@@ -20,6 +20,7 @@
                     <a href="#">PROJECTS</a>
                     <a href="#">TUTORIALS</a>
                     <a href="#">ROADMAPS</a>
+                    <a href="ebooks.html">EBOOKS</a>
                 </div>
             </div>
             <a href class="button">COMMUNIYTY</a>
@@ -49,10 +50,10 @@
         <div class="container">
             <div class="footer-content">
                 <h3>CONTACT US</h3>
-                <P>mrcollinswarah@gmail.com</P>
-                <p>collinswarah200@gmail.com</p>
-                <p>+237652868652</p>
-                <p>BAMEDA,CAMEROON</p>
+                <p><i class='bx bxs-envelope' >mrcollinswarah@gmail.com</i></p>
+                <p><i class='bx bxs-envelope' >collinswarah200@gmail.com</i></p>
+                <p><i class='bx bx-phone-call' >+237652868652</i></p>
+                <p><i class='bx bxs-location-plus'>BAMEDA,CAMEROON</i></p>
             </div>
             <div  class="footer-content">
                 <h3>Quick Links</h3>
