`Updated navigation links, CSS styles, and HTML content in various files.`

--- a/ebooks.html
+++ b/ebooks.html
@@ -15,9 +15,9 @@
             <div class="dropdown">
                 <a href="#" class="dropbtn">START LEARNING</a>
                 <div class="dropdown-content">
-                    <a href="#">PROJECTS</a>
-                    <a href="#">TUTORIALS</a>
-                    <a href="#">ROADMAPS</a>
+                    <a href="projects.html">PROJECTS</a>
+                    <a href="tutorial.html">TUTORIALS</a>
+                    <a href="roadmaps.html">ROADMAPS</a>
                     <a href="ebooks.html">EBOOKS</a>
                 </div>
             </div>
