--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="dropdown">
                 <a href="#" class="dropbtn">START LEARNING</a>
                 <div class="dropdown-content">
-                    <a href="#">PROJECT</a>
-                    <a href="#">ROADMAPS</a>
+                    <a href="projects.html">PROJECT</a>
+                    <a href="roadmaps.html">ROADMAPS</a>
                     <a href="tutorial.html">TUTORIALS</a>
                     <a href="ebooks.html">EBOOKS</a>
                 </div>
