--- a/tutorial.html
+++ b/tutorial.html
@@ -32,11 +32,10 @@
     
   <main>
     <section id="video-section">
-      <img src=" img/⚡️ BREAKTHROUGH_ Originality AI's Neural Content Authentication.jpeg ">
+      
       <h2>TECH HUB CM VIDOE RESOURCE</h2>
-      <p>Explore are Collection of Expert-led tutorials,Projects demos,and Insightfultech talks.vidoe is designed to guide you Through core concepts,real world application, and handson Development Projects,Empowering you to Grow in your tech Journey</p>
       <div id="video-controls">
-        <input type="text" id="search-input" placeholder="Search videos...">
+        <input type="text" id="search-input" placeholder="Videos Name...">
         <button id="search-btn">Search</button>
         <button id="add-video-btn">Add Video</button>
       </div>
