arrange the project card

--- a/projects.html
+++ b/projects.html
@@ -40,13 +40,12 @@
 
         <div id="projects-container">
             <div class="project" data-category="frontend">
-                <input type="checkbox" id="project1" class="project-toggle">
-                <label for="project1" class="view-more">View More</label>
                 <h2>Responsive Portfolio Website</h2>
                 <div class="project-preview">
                     <p>Create a responsive portfolio website using HTML, CSS, and JavaScript to showcase your skills and projects.</p>
                 </div>
                 <div class="project-full-content">
+                    <span class="close-content">&times;</span>
                     <p>This project involves building a fully responsive portfolio website that adapts to various screen sizes. It will showcase your skills, projects, and provide a way for potential employers or clients to contact you.</p>
                     <h3>Key Features:</h3>
                     <ul>
@@ -66,6 +65,7 @@
                     <h3>Learning Outcomes:</h3>
                     <p>By completing this project, you'll gain hands-on experience in front-end development, responsive design techniques, and creating a professional online presence. You'll also learn about web accessibility and performance optimization.</p>
                 </div>
+                <button class="view-more">View More</button>
             </div>
 
             <div class="project" data-category="backend">
