design the login form

--- a/ebooks.html
+++ b/ebooks.html
@@ -21,7 +21,7 @@
                     <a href="ebooks.html">EBOOKS</a>
                 </div>
             </div>
-            <a href="#" class="button">COMMUNITY</a>
+            <a href="login.html" class="button">COMMUNITY</a>
             <a href="#">CONTACT</a>
         </nav>
     </header>
