--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="ebooks.html">EBOOKS</a>
                 </div>
             </div>
-            <a href class="button">COMMUNIYTY</a>
+            <a href="login.html" class="button">COMMUNITY</a>
             <a href="#">CONTACT</a>
             
 
@@ -304,7 +304,7 @@ window.onload = function() {
                 <li><a href="#"><i class='bx bxl-facebook' ></i></a></li>
                 <li><a href="#"><i class='bx bxl-whatsapp' ></i></a></li>
                 <li><a href="#"><i class='bx bxl-github' ></i></a></li>
-                <li><a href="#"><i class='bx bxl-linkedin-square'></i></a></li>
+                <li><a href="https://www.linkedin.com/in/mr-collins-534b942b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class='bx bxl-linkedin-square'></i></a></li>
                 
             </ul>
             <img src="img/Untitled-12.jpg" alt="">
