design the contact page

--- a/roadmaps.html
+++ b/roadmaps.html
@@ -21,8 +21,8 @@
                     <a href="ebooks.html">EBOOKS</a>
                 </div>
             </div>
-            <a href="#" class="button">COMMUNITY</a>
-            <a href="#">CONTACT</a>
+            <a href="login.html">COMMUNITY</a>
+            <a href="contact.html">CONTACT</a>
         </nav>
     </header>
 
@@ -112,10 +112,10 @@
             <div class="footer-content">
                 <h3>FOLLOW US</h3>
                 <ul class="social-icons">
-                <li><a href="#"><i class='bx bxl-facebook' ></i></a></li>
-                <li><a href="#"><i class='bx bxl-whatsapp' ></i></a></li>
-                <li><a href="#"><i class='bx bxl-github' ></i></a></li>
-                <li><a href="#"><i class='bx bxl-linkedin-square'></i></a></li>
+                <li><a href="https://www.facebook.com/collins.warah "><i class='bx bxl-facebook' ></i></a></li>
+                <li><a href="https://wa.me/message/D6GD5Q5J5QIPB1 "><i class='bx bxl-whatsapp' ></i></a></li>
+                <li><a href="https://github.com/wara-collins "><i class='bx bxl-github' ></i></a></li>
+                <li><a href="https://www.linkedin.com/in/mr-collins-534b942b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app "><i class='bx bxl-linkedin-square'></i></a></li>
                 
             </ul>
             <img src=" img/Untitled-12.jpg " alt="">
