--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <a href="login.html">COMMUNIYTY</a>
-            <a href="#">CONTACT</a>
+            <a href="contact.html">CONTACT</a>
             
 
         </nav>
@@ -224,10 +224,10 @@
             <div class="footer-content">
                 <h3>FOLLOW US</h3>
                 <ul class="social-icons">
-                <li><a href="#"><i class='bx bxl-facebook' ></i></a></li>
-                <li><a href="#"><i class='bx bxl-whatsapp' ></i></a></li>
-                <li><a href="#"><i class='bx bxl-github' ></i></a></li>
-                <li><a href="#"><i class='bx bxl-linkedin-square'></i></a></li>
+                <li><a href="https://www.facebook.com/collins.warah "><i class='bx bxl-facebook' ></i></a></li>
+                <li><a href="https://wa.me/message/D6GD5Q5J5QIPB1 "><i class='bx bxl-whatsapp' ></i></a></li>
+                <li><a href="https://github.com/wara-collins"><i class='bx bxl-github' ></i></a></li>
+                <li><a href="https://www.linkedin.com/in/mr-collins-534b942b6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app "><i class='bx bxl-linkedin-square'></i></a></li>
                 
             </ul>
             <img src="img/Untitled-12.jpg" alt="">
