make some changes to the project

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
             <a href="index.h" class="active">HOME</a>
             
             <div class="dropdown">
-                <a href="#" class="dropbtn">START LEARNING</a>
+                <a href="#" class="dropbtn">START LEARNING <i class='bx bx-chevron-down'></i></a>
                 <div class="dropdown-content">
                     <a href="projects.html">PROJECT</a>
                     <a href="roadmaps.html">ROADMAPS</a>
@@ -215,10 +215,14 @@
             <div  class="footer-content">
                 <h3>Quick Links</h3>
                 <ul class="list">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Jobs</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="ebooks.html">EBOOKS</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="tutorial.html">TUTORIALS</a></li>
+                    <li><a href="roadmaps.html">ROADMAPS</a></li>
+                    <li><a href="login.html">COMMUNITY</a></li>
+                    <li><a href="contact.html">CONTACTS</a></li>
+                    <li><a href="contact.html">LINKS</a></li>
                 </ul>
             </div>
             <div class="footer-content">
