--- a/roadmaps.html
+++ b/roadmaps.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <a href="index.html">HOME</a>
             <div class="dropdown">
-                <a href="#" class="dropbtn">START LEARNING</a>
+                <a href="#" class="dropbtn">START LEARNING <i class='bx bx-chevron-down'></i></a>
                 <div class="dropdown-content">
                     <a href="projects.html">PROJECTS</a>
                     <a href="tutorial.html">TUTORIALS</a>
@@ -103,10 +103,14 @@
             <div  class="footer-content">
                 <h3>Quick Links</h3>
                 <ul class="list">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">PROJECTSt</a></li>
-                    <li><a href="#">TUTORIALS</a></li>
-                    <li><a href="#">ROADMAPS</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="projects.html">PROJECTSt</a></li>
+                    <li><a href="tutorial.html">TUTORIALS</a></li>
+                    <li><a href="roadmaps.html">ROADMAPS</a></li>
+                    <li><a href="ebooks.html">EBOOKS</a></li>
+                    <li><a href="community.html">COMMUNITY</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="contact.html">LINKS</a></li>
                 </ul>
             </div>
             <div class="footer-content">
