--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <a href="index.html">HOME</a>
             
             <div class="dropdown">
-                <a href="#" class="dropbtn">START LEARNING</a>
+                <a href="#" class="dropbtn">START LEARNING <i class='bx bx-chevron-down'></i></a>
                 <div class="dropdown-content">
                     <a href="projects.html">PROJECT</a>
                     <a href="roadmaps.html">ROADMAPS</a>
@@ -25,8 +25,8 @@
                 </div>
             </div>
             
-            <a href="contact.html">CONTACT</a>
             <a href="login.html">COMMUNITY</a>
+            <a href="contact.html">CONTACT</a>
         </nav>
     </header>
 
@@ -71,7 +71,7 @@
                 </div>
                 <div class="form-group">
                     <input type="email" placeholder="Your Email" required>
-                </div>
+                </div>  
                 <div class="form-group">
                     <input type="text" placeholder="Subject" required>
                 </div>
@@ -88,15 +88,15 @@
             <h2>Follow Us</h2>
             <p>Stay connected with us on social media</p>
             <div class="social-icons-large">
-                <a href="#" class="social-icon">
+                <a href="https://www.facebook.com/collins.warah" class="social-icon">
                     <i class='bx bxl-facebook'></i>
                     <span>Facebook</span>
                 </a>
-                <a href="#" class="social-icon">
+                <a href="https://wa.me/message/D6GD5Q5J5QIPB1 " class="social-icon">
                     <i class='bx bxl-whatsapp'></i>
                     <span>WhatsApp</span>
                 </a>
-                <a href="#" class="social-icon">
+                <a href="https://github.com/wara-collins " class="social-icon">
                     <i class='bx bxl-github'></i>
                     <span>GitHub</span>
                 </a>
@@ -105,8 +105,8 @@
                     <span>LinkedIn</span>
                 </a>
                 <a href="#" class="social-icon">
-                    <i class='bx bxl-twitter'></i>
-                    <span>Twitter</span>
+                    <i class='bx bxl-tiktok'></i>
+                    <span>Tiktok</span>
                 </a>
                 <a href="#" class="social-icon">
                     <i class='bx bxl-instagram'></i>
@@ -131,6 +131,9 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="community.html">Community</a></li>
+                    <li><a href="roadmaps.html">Roadmaps</a></li>
+                    <li><a href="tutorial.html">Tutorials</a></li>
+                    <li><a href="ebooks.html">Ebooks</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
