added some margin to center the text and images better made some margin adjustments to the headings in the boxes to align them better with the images

--- a/index.html
+++ b/index.html
@@ -59,25 +59,25 @@
        <div class="box-1">   
      <img src="img/Coding workshop-pana.png "height="80px" width="80px" alt="">     
                         <h3>MISSION</h3>    
-                        <p>To provide a collaborative space where tech enthusiasts, startups, and innovators can<br> learn, build, and scale impactful solutions.And To nurture talent and empower communities through accessible tech education, startup incubation, and industry partnerships.</p>
-                        <a href="signup.html" class="button">SIGNUP</a> 
+                        <p>To provide a collaborative space where tech enthusiasts, startups, and innovators can learn, build, and scale impactful solutions.And To nurture talent and empower communities through accessible tech education, startup incubation, and industry partnerships.</p>
+                        <a href="login.html" class="button">SIGNUP</a> 
                     </div>
                     <div class="box-2">
                         <img src="img/Coding workshop-pana.png "
                         height="80px" width="80px" alt="">
                         <h3>VISION</h3>
                         <p>To transform Cameroon into a globally recognized center for digital innovation, talent, and startup growth.To bridge local potential with global opportunity through technology, creativity, and collaboration.</p>
-                        <a href="signup.html" class="button">SIGNUP</a> 
+                        <a href="login.html" class="button">SIGNUP</a> 
             </div>
         
             <div class="box-3">
                 <img src="img/Coding workshop-pana.png "
                 height="80px" width="80px" alt="">
                 <h3>VALUE</h3>
-                <p><strong>INNOVATION:</strong> We embrace creativity and continuous learning to drive change.<br>
-                   <strong>COLLABORATION:</strong> We grow stronger by working together and sharing knowledge. <br>
+                <p><strong>INNOVATION</strong> We embrace creativity and continuous learning to drive change.
+                   <strong>COLLABORATION:</strong> We grow stronger by working together and sharing knowledge. 
                    <strong>INCLUSION:</strong> We believe tech should be accessible to all, regardless of background.</p>
-            <a href="signup.html" class="button">SIGNUP</a> 
+            <a href="login.html" class="button">SIGNUP</a> 
 
             </div>
         </div>
@@ -140,26 +140,6 @@
     <h3>BOOTTRAPS</h3>
     <p>Prebuilt CSS components for fast UI design </p>
     </div>
-    <div class="component-1">
-    <img src="img/Jquery is something else!!!.jpg" height="50px" width="60px" alt="">
-    <h3>JQUERY</h3>
-    <p> Simplifies DOM manipulation and AJAX</p>
-  </div>
-  <div class="component-1">
-    <img src="img/3.png" height="50px" width="50px" alt="">
-    <h3>ANGULAR</h3>
-    <p>Full-fledged front-end framework by Google</p>
-  </div>
-  <div class="component-1">
-    <img src="img/]6.jpg" height="50px" width="100px" alt="">
-    <h3>TAILWIND CSS</h3>
-    <p> Utility-first CSS for custom styling.</p>
-  </div>
-  <div class="component-1">
-    <img src="img/Untitled-3.jpg" height="30px" width="50px" alt="">
-    <h3>REACT</h3>
-    <p>Component-based UI library from Meta</p>
-  </div>
   </div>
   </div>
 
@@ -185,21 +165,6 @@
     <h3>RUBY</h3>
     <p> Known for the Ruby on Rails framework</p>
     </div>
-    <div class="component-1">
-    <img src="img/Untitled-10.png" height="30px" width="50px" alt="">
-    <h3>JAVA</h3>
-    <p>Widely used for enterprise applications and Android back-ends</p>
-  </div>
-  <div class="component-1">
-    <img src=" img/15.jpg" height="30px" width="50px" alt="">
-    <h3>C#</h3>
-    <p>Microsoft’s language for building scalable web and desktop apps</p>
-  </div>
-  <div class="component-1">
-    <img src="img/Untitled-2.jpg " height="30px" width="50px" alt="">
-    <h3>Go (Golang)</h3>
-    <p>Fast and efficient; good for APIs and microservices</p>
-  </div>
   </div>
   </div>
   <script>
@@ -223,7 +188,7 @@ window.onload = function() {
 <div class="community">
   <h1>JOIN OUR COMMUNITY TODAY</h1>
   <h6>CONNECT,COLLABORATE,AND GROW WITH FELLOW TECH ENTHUSIASTS</h6>
-  <img src="img/tech company-amico.png " width="1300px" height="500px">
+  <img src="img/tech company-amico.png ">
   <div class="community-1">
   <div class="community-card">
     <img src="img/Conference-rafiki.png" width="380px" height="150px">
@@ -243,20 +208,10 @@ window.onload = function() {
     <h3>MENTORSHIP PROGRAM</h3>
     <p>Get guidiance from experience Developersand Industry profestionals Learn how to contribute to real-world open-source projects and collaborate with developers globally.</p>
   </div>
-<div class="community-card">
- <img src="img/Online learning-amico.png" width="380px" height="150px"> 
+  <div class="community-card">
+ <img src="img/Online learning-amico.png" width="380px" height="150px">
     <h3>Project Showcase</h3>
     <p>Present your tech projects to the community, investors, or hiring managers for feedback and exposure.Participate in projects that solve real local problems using technology to give back to the community</p>
-  </div>
-  <div class="community-card">
-    <img src="img/Web Development.jpeg" width="380px" height="150px">
-    <h3>WEB DESIGN</h3>
-    <p>Intensive coding programs designed to get you job-ready in months.Learn full-stack development, build your portfolio, and gain in-demand skills.</p>
-  </div>
-  <div class="community-card">
-   <img src="img/Stress-rafiki.png" width="380px" height="150px"> 
-    <h3>Ask, Help, Answer</h3>
-    <p> Whether you have a question or can help someone else—every contribution makes the community stronger.</p>
   </div>
   </div>
   </div>
@@ -317,7 +272,7 @@ window.onload = function() {
             </div>
         </div>
         <div class="bottom-bar">
-            <p>&COPY;2025 COLLINS WARAH .All rights reserveed</p>
+            <p>&copy;2025 COLLINS WARAH. All rights reserved</p>
         </div>
       </footer>
 </body>
